2008-02-08  Neal H. Walfield  <neal@gnu.org>

	* storage.c (LINK): Remove dead code.
	(UNLINK): Likewise.

2008-02-08  Neal H. Walfield  <neal@gnu.org>

	* as.h (as_object_index_t): New definition.
	(as_slot_ensure_full_custom): New declaration.
	(as_insert_custom): Likewise.

2008-01-25  Neal H. Walfield  <neal@gnu.org>

	* storage.c (storage_init_done): New variable.
	(storage_alloc_): Assert that storage_init_done is true.
	(storage_init): Set storage_init_done to true.
	
	(storage_init): Count the number of folios allocated and report it
	and the number of objects allocated.

2008-01-24  Neal H. Walfield  <neal@gnu.org>

	* as.h (as_slot_ensure_full): New declaration.
	(as_insert): Take additional parameters SOURCE_AS and TARGET_AS.
	* as.c (as_slot_ensure_full): Remove declaration.
	(as_slot_ensure): Update use of as_slot_ensure full to be
	consistent with the new API.
	(as_alloc_slow): Update use of rm_cap_copy to be consistent with
	new API.

2008-01-24  Neal H. Walfield  <neal@gnu.org>

	* as.c (as_slot_ensure): Update use of as_slot_ensure_full to be
	consistent with new API.
	(as_alloc_slow): Update use of rm_cap_copy to be consistent with
	new API.
	(as_init): Likewise.
	(as_walk): Likewise.

2008-01-24  Neal H. Walfield  <neal@gnu.org>

	* as.c (as_alloced_dump): Use s_printf rather than printf.
	(as_walk): Likewise.

2008-01-23  Neal H. Walfield  <neal@gnu.org>

	* Makefile.am (COMMON_CPPFLAGS): Add -I$(LIBC)/include.

2008-01-23  Neal H. Walfield  <neal@gnu.org>

	* capalloc.c (link): Rename from this...
	(list_link): ... to this.  Update users.
	(unlink): Rename from this...
	(list_unlink): ... to this.  Update users.
	* storage.c (link): Rename from this...
	(list_link): ... to this.  Update users.
	(unlink): Rename from this...
	(list_unlink): ... to this.  Update users.

2008-01-16  Neal H. Walfield  <neal@gnu.org>

	* storage.c (shadow_setup): Update rm_folio_object_alloc use to
	reflect API changes.
	(storage_alloc_): Likewise.